--- a/consulta.html
+++ b/consulta.html
@@ -21,6 +21,9 @@
 
         <!-- Font Awesome -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+        
+        <!-- Script externo -->
+        <script src="app.js"></script>
 
         <title>Orçamento pessoal</title>
     </head>
