--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
         <!-- Font Awesome -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+        <!-- Script externo -->
+        <script src="app.js"></script>
+
         <title>Orçamento pessoal</title>
     </head>
     <body>
@@ -55,9 +59,9 @@
                 </div>
             </div>
 
-            <div class="row mb-2">
-                <div class="col-md-2">
-                    <select class="form-control" id="ano">
+            <div class="row mb-2 ">
+                <div class="col-md-2 ">
+                    <select class="form-control " id="ano">
                         <option value="">Ano</option>
                         <option value="2018">2018</option>
                         <option value="2019">2019</option>
@@ -106,11 +110,11 @@
                     <input type="text" class="form-control" placeholder="Descrição" id="descricao" />
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-2 ">
                     <input type="text" class="form-control" placeholder="Valor" id="valor" />
                 </div>
 
-                <div class="col-md-2 d-flex justify-content-end">
+                <div class="col-md-2 d-flex  justify-content-end">
                     <button type="button" class="btn btn-success">
                         <i class="fas fa-plus"></i>
                     </button>
