--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="col-md-2 d-flex  justify-content-end">
-                    <button type="button" class="btn btn-success">
+                    <button type="button" class="btn btn-success" onclick="cadastraDespesa()">
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
