--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <title>Orçamento pessoal</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success mb-5">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="logo.png" width="50" height="35" alt="Orçamento pessoal">
@@ -116,11 +116,51 @@
                 </div>
 
                 <div class="col-md-2 d-flex  justify-content-end">
-                    <button type="button" class="btn btn-success" onclick="cadastraDespesa()">
+                    <button type="button" class="btn btn-dark" onclick="cadastraDespesa()">
                         <i class="fas fa-plus"></i>
                     </button>
                 </div>
             </div>
         </div>
+        
+    
+    <!-- Modal -->
+    <div class="modal fade" id="erroGravacao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-danger">
+                    <h5 class="modal-title" id="erroGravacao">Erro ao cadastra</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                Campos obrigatório vazios
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Corrigir</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="sucessoGrava" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-success">
+                    <h5 class="modal-title" id="erroGravacao">Registro Comfirmado</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Despesa foi registrada com sucesso
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Voltar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
