--- a/consulta.html
+++ b/consulta.html
@@ -27,8 +27,8 @@
 
         <title>Orçamento pessoal</title>
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
+    <body onload="carregaDespesas()">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="logo.png" width="50" height="35" alt="Orçamento pessoal">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="col-md-2 d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-dark
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
